[package]
authors = ["Justin van Zyl <justin.vanzyl@gmail.com>"]
name = "rotten"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/justinvzyl/rotten"
description = "A fast UDP Bittorrent Tracker server."

[[bin]]
name = "rotten-server"
path = "src/bin/server.rs"

[dependencies]
bytes = "1"
byteorder = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"